修复收藏功能，给菜单添加图标

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -36,8 +36,10 @@
             android:enabled="true"
             android:exported="true" />
 
-        <activity android:name=".activity.SettingActivity" />
-        <activity android:name=".activity.FavoriteActivity"></activity>
+        <activity android:name=".activity.SettingActivity"
+            android:launchMode="singleInstance" />
+        <activity android:name=".activity.FavoriteActivity"
+            android:launchMode="singleInstance" />
     </application>
 
 </manifest>
